fix wallet balance, makefile,docker compose, add swagger input examples
