# internal/models/transaction.go
@@ -11,7 +11,7 @@ type Transaction struct {
 	UserId      int       `db:"user_id" json:"user_id"`
 	Type        string    `db:"type" json:"type"` // "income" или "expense" или "initial"(только при создании кошелька с первоначальным балансом)
 	Amount      int64     `db:"amount" json:"amount"`
-	Category    string    `db:"category" json:"category"`
+	CategoryID  *int      `db:"category_id" json:"category_id"`
 	Description string    `db:"description" json:"description"`
 	Date        time.Time `db:"date" json:"date"`
 	CreatedAt   time.Time `db:"created_at" json:"created_at"`
@@ -20,18 +20,26 @@ type Transaction struct {
 
 // Input для создания транзакции
 type CreateTransactionInput struct {
-	Type        string    `json:"type" binding:"required,oneof=income expense initial"`
-	Amount      float64   `json:"amount" binding:"required,gt=0"`
-	Category    string    `json:"category" binding:"required"`
-	Description string    `json:"description"`
-	Date        time.Time `json:"date"`
+	Type        string    `json:"type" binding:"required,oneof=income expense initial" example:"expense"`
+	Amount      float64   `json:"amount" binding:"required,gt=0" example:"150.50"`
+	CategoryID  *int      `json:"category" binding:"required" example:"1"`
+	Description string    `json:"description" example:"Grocery shopping"`
+	Date        time.Time `json:"date" binding:"required" example:"2026-01-27T12:00:00Z"`
 }
 
 // Input для обновления транзакции
 type UpdateTransactionInput struct {
+	Type        *string    `json:"type" example:"income"`
+	Amount      *float64   `json:"amount" binding:"omitempty,gt=0" example:"200.00"`
+	CategoryID  *int       `json:"category_id" example:"3"`
+	Description *string    `json:"description" example:"Updated description"`
+	Date        *time.Time `json:"date" example:"2026-01-28T15:00:00Z"`
+}
+
+type UpdateTransactionData struct {
 	Type        *string    `json:"type"`
-	Amount      *float64   `json:"amount"`
-	Category    *string    `json:"category"`
+	Amount      *int64     `json:"amount"`
+	CategoryID  *int       `json:"category_id"`
 	Description *string    `json:"description"`
 	Date        *time.Time `json:"date"`
 }
@@ -44,7 +52,7 @@ func (t CreateTransactionInput) Validate() error {
 	if t.Amount <= 0 {
 		return errors.New("amount must be greater than 0")
 	}
-	if t.Category == "" {
+	if t.CategoryID == nil {
 		return errors.New("category is required")
 	}
 	return nil
@@ -59,12 +67,4 @@ func (t UpdateTransactionInput) Validate() error {
 		return errors.New("amount must be greater than 0")
 	}
 	return nil
-}
-
-type UpdateTransactionData struct {
-	Type        *string    `json:"type"`
-	Amount      *int64     `json:"amount"`
-	Category    *string    `json:"category"`
-	Description *string    `json:"description"`
-	Date        *time.Time `json:"date"`
 }
